# tvb-ext-bucket

./: .gitignore  .prettierignore  .stylelintrc  README.md  RELEASE.md  codemeta.json  conftest.py  install.json  jest.config.js  package.json  pyproject.toml  setup.py  sonar-project.properties  tsconfig.json
.github/workflows/: build.yml  check-release.yml  ebrains-sync.yml  release.yml
jupyter-config/nb-config/: tvb-ext-bucket.json  tvb_ext_bucket.json  tvbextbucket.json
jupyter-config/server-config/: tvb-ext-bucket.json  tvb_ext_bucket.json  tvbextbucket.json
src/: BucketContext.tsx  BucketSearch.tsx  BucketWidget.tsx  CollabSpaceEntry.tsx  ContextMenu.tsx  ContextMenuItem.tsx  DragDownload.tsx  DropZone.tsx  FileTransferAnimations.tsx  JpFileBrowser.ts  JpSpinner.tsx  Settings.tsx  Tooltip.tsx  bucketFileBrowser.ts  exceptions.ts  handler.ts  hooks.ts  index.ts  utils.ts
src/__tests__/: BucketWidget.spec.tsx  ContextMenu.spec.tsx  bucketFileBrowser.spec.ts  handler.spec.ts  testUtils.ts  tvb-ext-bucket.spec.ts  utils.spec.ts
src/hooks/: useBucketSearch.ts  useOuterClickClosable.ts  useStoredState.ts
src/utils/: bucketUtils.ts  domUtils.ts
style/: base.css
tvb-ext-bucket/: __init__.py  handlers.py
tvb-ext-bucket/tests/: __init__.py  test_handlers.py
tvb_ext_bucket/: __init__.py  ebrains_drive_wrapper.py  exceptions.py  handlers.py
tvb_ext_bucket/bucket_api/: bucket.py  bucket_api.py  buckets.py  dataproxy_file.py
tvb_ext_bucket/logger/: builder.py  logging.conf
tvb_ext_bucket/tests/: __init__.py  test_bucket.py  test_buckets.py  test_dataproxy_file.py  test_drive_wrapper.py  test_handlers.py
tvbextbucket/: __init__.py  ebrains_drive_wrapper.py  handlers.py
tvbextbucket/logger/: logging.conf
tvbextbucket/tests/: test_drive_wrapper.py  test_handlers.py
ui-tests/: README.md  package.json
ui-tests/tests/: tvb_ext_bucket.spec.ts
