[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab>=3.4.7,<4.0.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "tvb-ext-bucket"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_server>=1.6,<3",
    "ebrains-drive>=0.5.0"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-tornasync",
    "pytest-mock"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["tvbextbucket/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"tvbextbucket/labextension" = "share/jupyter/labextensions/tvb-ext-bucket"
"install.json" = "share/jupyter/labextensions/tvb-ext-bucket/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.hooks.version]
path = "tvbextbucket/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "tvbextbucket/labextension/static/style.js",
    "tvbextbucket/labextension/package.json",
]
skip-if-exists = ["tvbextbucket/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "tvbextbucket/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.conf"]

[tool.setuptools.packages.find]
include = ["LICENSE", "*.md", "pyproject.toml", "package.json", "install.json", "babel.config.js", "jest.config.js",
           "AUTHORS", "ts*.json", "*.properties", "yarn.lock", "tvbextbucket/logger/logging.conf"]
exclude = ["**/node_modules", "lib", "binder", "*.log", "*.pyc", "*.pyo", ".git", ".ipynb_checkpoints"]